# Django-ecommerce-app

./: pyproject.toml
ecommerce/: settings.py
static/css/: main.css
store/templates/store/: cart.html  checkout.html  main.html  store.html
