[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "ecommerce web site"
authors = ["mosouley <mo.souley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
